--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="todo_start_local_deletion">TODO: start local deletion</string>
     <string name="todo_operation_finished_in_success">TODO: operation finished in success</string>
     <string name="todo_operation_finished_in_fail">TODO: operation finished in fail</string>
+
+    <string name="open_profile_checker">Profile checker opened</string>
+    <string name="close_profile_checker">Profile checker closed</string>
+
 </resources>
